Saved All Changes

--- a/Classmaker/AssignLinks/templates/assignlinks/LinksShow.html
+++ b/Classmaker/AssignLinks/templates/assignlinks/LinksShow.html
@@ -1,7 +1,5 @@
-
 {% extends 'assignlinks/layout.html' %}
 {% load bootstrap4 %}
-
 {% block extra_css %}
 {{ form.media.css }}
 {% endblock %}
@@ -11,16 +9,179 @@
 {% endblock %}
 
 {% block content %}
-<h2 class="pb-2 mt-4 mb-2 border-bottom">Custom Form with Bootstrap 4</h2>
-<div class="row">
-  <div class='col-md-6'>
-    <form action="" method="post">
-      {% csrf_token %}
-      {% bootstrap_form form %}
-      {% buttons %}
-      <button type="submit" class="btn btn-primary">Submit</button>
-      {% endbuttons %}
-    </form>
+<style>
+  html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+  border: 0;
+  margin: 0;
+  padding: 0;
+  vertical-align: baseline;
+
+}
+.settings-box {
+  border: 1px solid #aaa;
+  border-radius: 5px;
+  margin-bottom: 30px;
+  width: 650px;
+}
+.accordion-toggle.closed, .accordion-toggle-overlay.closed {
+    background-position: 102.5% -2632px;
+}
+.settings-box .accordion-toggle {
+    border-radius: 5px;
+    padding: 14px 16px;
+    font-size: 13px;
+}
+
+.accordion-toggle, .accordion-toggle-overlay, .row.test-question, .row.group-name-row {
+    background: none repeat scroll 0 0 #f9fafb;
+    position: relative;
+}
+.accordion-toggle, .accordion-toggle-overlay {
+    cursor: pointer;
+}
+h1, h2, h3, h4, h5 {
+  clear: both;
+  font-weight: 700;
+  line-height: 1.4em;
+  margin-bottom: 0.3em;
+}
+
+.settings-box h3 {
+  float: left;
+  font-size: 13px;
+  margin-top: 0;
+  text-align: left;
+  width: 108px;
+}
+.form-field-title {
+    display: inline-block;
+    margin-top: 3px;
+    margin-right: 10px;
+    text-align: right;
+    width: 125px;
+}
+.settings-status {
+  line-height: 1.4em;
+}
+.field-group {
+  margin-bottom: 60px;
+  padding-right: 5px;
+}
+.settings-box .accordion-fold {
+  background: none repeat scroll 0 0 #fff;
+  border-top: 1px solid #aaa;
+  border-radius: 0 0 5px 5px;
+  padding-top: 27px;
+}
+.accordion-fold {
+  clear: both;
+  display: none;
+}
+input[type=text], input[type=number], input[type=password], textarea {
+  border: 1px solid #ddd;
+  border-radius: 3px 3px 3px 3px;
+  margin-bottom: 8px;
+  margin-left: 0;
+  padding: 6px;
+  color: #444;
+  font-family: Helvetica Neue,Arial,sans-serif;
+  font-size: 95.25%;
+  line-height: 1.3em;
+}
+
+ .django-ckeditor-widget{
+    position: relative;
+    left: 47px;
+    top: 50px;
+    margin-top:20px
+ }
+</style>
+<form action="" method="post"> {% csrf_token %}
+  <div class="settings-box">
+    <div class="accordion-toggle scroll_TL setting-time-limit closed">
+      <h3 class="form-field-title">Time Limit</h3>
+      <div class="settings-status">No</div>
+      <div class="caret">&nbsp;</div>
+    </div>
+    <div class="accordion-fold" style="display: none;">
+      <div class="field-group">
+        {{ time_limit_form }}
+      </div>
+    </div>
   </div>
-</div>
+  <div class="settings-box">
+    <div class="accordion-toggle scroll_Availability setting-availability closed">
+      <h3 class="form-field-title">Availability</h3>
+      <div class="settings-status">Available</div>Test Completion
+      <div class="caret">&nbsp;</div>
+    </div>
+    <div class="accordion-fold" style="display: none;">
+      <div class="field-group">
+        {% bootstrap_form form %}
+      </div>
+    </div>
+  </div>
+  <div class="settings-box">
+    <div class="accordion-toggle scroll_Availability setting-availability closed">
+      <h3 class="form-field-title">Test Questions</h3>
+      <div class="caret">&nbsp;</div>
+    </div>
+    <div class="accordion-fold" style="display: none;">
+      <div class="field-group">
+        {{ display_form.as_p }}
+      </div>
+    </div>
+  </div>
+  <div class="settings-box">
+    <div class="accordion-toggle scroll_Availability setting-availability closed">
+      <h3 class="form-field-title">Test Completion</h3>
+      <div class="caret">&nbsp;</div>
+    </div>
+    <div class="accordion-fold" style="display: none;">
+      <div class="field-group">
+        {{ test_completion.as_p }}
+        {{ test_completion.media }}
+      </div>
+    </div>
+  </div>
+  <div class="settings-box">
+    <div class="accordion-toggle scroll_Availability setting-availability closed">
+      <h3 class="form-field-title">Email Results</h3>
+      <div class="caret">&nbsp;</div>
+    </div>
+    <div class="accordion-fold" style="display: none;">
+      <div class="field-group">
+        {{ sendoffon.as_p }}
+        {{ creator_send.as_p }}
+        {{ taker_send.as_p }}
+      </div>
+    </div>
+  </div>
+  <div class="btn-submit">
+    {% buttons %}
+    <button type="submit" class="btn btn-primary">Submit</button>
+    {% endbuttons %}
+  </div>
+</form>
+<script>
+  // Get references to all accordion elements
+  const accordionElements = document.querySelectorAll('.settings-box');
+
+  // Loop through each accordion element
+  accordionElements.forEach((accordionElement) => {
+    const accordionToggle = accordionElement.querySelector('.accordion-toggle');
+    const accordionFold = accordionElement.querySelector('.accordion-fold');
+
+    // Add a click event listener to the accordion toggle
+    accordionToggle.addEventListener('click', () => {
+      // Toggle the display style of the accordion fold
+      if (accordionFold.style.display === 'none' || accordionFold.style.display === '') {
+        accordionFold.style.display = 'block';
+      } else {
+        accordionFold.style.display = 'none';
+      }
+    });
+  });
+  
+</script>
 {% endblock %}
