--- a/Classmaker/UserResponse/templates/userresponse/startTest.html
+++ b/Classmaker/UserResponse/templates/userresponse/startTest.html
@@ -30,7 +30,7 @@
 <body>
 <form method="POST">
     {% csrf_token %}
-    <button type="submit" name="start" value="{{ test_id }}">Start</button>
+    <button type="submit" name="start" value="{{ assign_id }}">Start</button>
 </form>
 </body>
 </html>
