addition complex question system||almost finished answer system

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forgot_password</title>
+    <title>Create Blog Form</title>
     <link rel="stylesheet" href="{% static 'css/blog.css' %}">
 </head>
 <body>
