edit form_range.html file

--- a/templates/create_editor.html
+++ b/templates/create_editor.html
@@ -1,8 +1,14 @@
-
-
-
-
+<!DOCTYPE html>
 {% load static %}
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <link rel="stylesheet" href="{%static 'css/create_editor.css'%}">
+</head>
+<body>
+
+
 
 
 
@@ -15,3 +21,6 @@
     {% endfor %}
     <button type="submit">Submit</button>
 </form>
+
+</body>
+</html>
